frontend/bowtie/src/components/gamelist/GameSearchModal/GameSearchModal.scss
@import "../../../style.scss";

.game-search-modal {
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  overflow: auto;
  background-color: $main-color;
  padding-top: 2px;
  width: 600px;
  min-height: 65px;
  left: 50%;
  margin-left: -250px;
  top: 20%;
  border-radius: 10px;
  box-shadow: -5px -5px 10px 0 rgba(0, 0, 0, 0.16),
    5px 5px 10px 0 rgba(0, 0, 0, 0.16);
  display: grid;
  grid-template-columns: 20% 70%;
  gap: 1px 0px;
  grid-template-areas: "first second";
  .icon {
    grid-area: first;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .search-box {
    margin-left: -20px;
    grid-area: second;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  input {
    width: 100%;
    height: 55px;
    background-color: transparent;
    border: none;
    font-size: 2em;
    font-weight: 500;
    color: rgba(238, 247, 255, 1);
    outline: none

  }
  input::placeholder {
    color: rgba(238, 247, 255, 0.5);

  }
  input:focus{
    outline: none;
  }
  *:focus {
    outline: none;
  }
  .search-results-container{
    margin-top: 0px;
    border-top: 3px solid;
    width: 600px;
    padding-bottom: 20px;
    max-height: 600px;
    overflow-x: hidden;
    .search-result-element{
      padding-top: 15px;
      padding-bottom: 15px;
      margin-bottom: 2px;
      padding-left: 40px;
      font-size: 1.5em;
      font-weight: 500;
      display: grid;
      grid-template-columns: 15% 85%;
      gap: 1px 1px;
      grid-template-areas: "Image Text";
      cursor: pointer;
      .search-result-text{
        grid-area: Text;
        align-self: center;
        margin-left: 40px;
      }
      .image{
        grid-area: Image;
        width: 90px;
        height: 130px;
        background-size: cover;
      }
    }
    .search-result-element:first-child{
      margin-top: 0px;
    }
    .search-result-element:hover{
      background-color: rgba(238, 247, 255, 0.08);
    }
    .see-more-btn{
      margin-top: 15px;
      padding-top: 5px;
      padding-bottom: 5px;
      color: rgba(238, 247, 255, 0.5);
      padding-left: 40px;
      font-size: 1.2em;
      cursor: pointer;
    }
    .empty-response-message{
      margin-top: 15px;
      padding-top: 5px;
      padding-bottom: 5px;
      color: rgba(238, 247, 255, 0.5);
      padding-left: 40px;
      font-size: 1.2em;
      cursor: default;
    }
    .see-more-btn:hover{
      background-color: rgba(238, 247, 255, 0.08);
    }
  }
  .searching-status-label{
    margin-top: 15px;
    padding-top: 5px;
    padding-bottom: 5px;
    color: rgba(238, 247, 255, 0.5);
    padding-left: 40px;
    font-size: 1.2em;
  }
}


.modal-wrapper {
  z-index: 1;
  position: fixed;
  background-color: rgba(0, 0, 0, 0.4);
  width: 100%;
  height: 100%;
  margin-left: -10px;
  margin-top: -10px;
}

@media only screen and (max-width: 500px) {
  .game-search-modal{
    width: 90vw;
    max-width: 100%;
    margin-left: -45vw;
    top: 10%;
    .search-results-container{
      width: 90vw;
      .search-result-element{
        padding-left: 17px;
        grid-template-columns: 20% 80%;
      }
    }
    input {
      font-size: 1.5em;
    }
    .search-box {
      margin-left: 0px;
    }
  }
}

@media only screen and (max-width: 300px) {
  .game-search-modal{
    input {
      font-size: 1.4em;
    }
  }
}

